style fix, anchor inline-block to ensure no deadspot when links wrap

--- a/src/styles/sass/_sm-default.scss
+++ b/src/styles/sass/_sm-default.scss
@@ -650,6 +650,7 @@ footer {
     font-size: 1.5rem;
     font-weight: $boldWeight;
     line-height: 1.4;
+    display: inline-block;
   }
 }
 
